# CS3505--Spring--2016

./: Makefile  README.md  inch_to_cm.cpp  main.cpp
A2/: HaruPDF.cpp  HaruPDF.cpp~  HaruPDF.h  HaruPDF.h~  Makefile  Spiral.cpp  Spiral.cpp~  Spiral.h  spiralPDF.cpp  spiralPDF.cpp~
A3/: Makefile  Trie.cpp  Trie.h  TrieNode.cpp  TrieNode.h  TrieTest.cpp  query.txt
A4/: Makefile  Test.cpp  testFile.txt
A4/Trie/: Trie.cpp  Trie.h
A5/: SimonGame.pro  SimonGame.pro.user.1c49b06  SimonGame.pro.user.815462a  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc  simonlogic.cpp  simonlogic.h
CSharpServer/: .gitignore  Server.sln
CSharpServer/Server/: Program.cs  SFMLPacket.cs  Server.csproj  TypeTypeServer.cs
QSFMLCanvasSample/: TypeRacer.pro  canvas.cpp  canvas.h  main.cpp  qsfmlcanvas.cpp  qsfmlcanvas.h
Spritet/: README  Spritet.pro  Spritet.pro.orig
Spritet - Terrifying Nitpickers/: Code Review Sign Off.odt  Spritet Code Style Guide.docx  Spritet Tutorial Document.doc  Spritet_Demo_Save.ssp  Team Name README.txt
Spritet/android/: AndroidManifest.xml
Spritet/include/: colorswitcher.h  define.h  drawingcanvas.h  drawingframe.h  framecontainer.h  framepanel.h  hotkeypanel.h  menu.h  modtroller.h  preview.h  spritetgui.h  thumbnail.h  tool.h  toolbox.h  toolbutton.h
Spritet/resources/: icons.qrc
Spritet/src/: colorswitcher.cpp  drawingcanvas.cpp  drawingframe.cpp  framecontainer.cpp  framepanel.cpp  hotkeypanel.cpp  menu.cpp  modtroller.cpp  preview.cpp  spritetgui.cpp  thumbnail.cpp  tool.cpp  toolbox.cpp  toolbutton.cpp
Spritet/translations/: spritet_de.qm  spritet_de.ts  spritet_es.qm  spritet_es.ts  spritet_fr.qm  spritet_fr.ts  spritet_zh.qm  spritet_zh.ts
TypeTypeRevolution/: CMakeLists.txt  RichTextLicense.markdown  TypeTypeRevolution.pro  TypeTypeRevolution.pro.orig  resources.qrc  splitter.py
TypeTypeRevolution/Meeting Notes/: TODO Teamname Meeting Document Sprint 1.doc
TypeTypeRevolution/Resources/translations/: typetypetranslation_de.qm  typetypetranslation_de.ts  typetypetranslation_es.ts  typetypetranslation_fr.ts  typetypetranslation_zh.ts
TypeTypeRevolution/include/: buoyancy.h  buoyancylogic.h  callbackfunctor.h  chooselessondialog.h  crate.h  entity.h  fallingcanvas.h  keyboardhandler.h  mycontactlistener.h  networkcontroller.h  qsfmlcanvas.h  richtext.h  serverconnectdialog.h  timecanvas.h  typetypecallbackserver.h  typetypecontroller.h  typetypegui.h  typetypemenu.h  wordbox.h
TypeTypeRevolution/src/: buoyancy.cpp  buoyancylogic.cpp  chooselessondialog.cpp  crate.cpp  entity.cpp  fallingcanvas.cpp  keyboardhandler.cpp  mycontactlistener.cpp  networkcontroller.cpp  qsfmlcanvas.cpp  richtext.cpp  serverconnectdialog.cpp  timecanvas.cpp  typetypecallbackserver.cpp  typetypecontroller.cpp  typetypegui.cpp  typetypemain.cpp  typetypemenu.cpp  wordbox.cpp
TypeTypeServer/: .gitignore  Makefile  TypeTest  typetypeprotocol  typetypeserver.sql
TypeTypeServer/inc/: define.h  htmltablegenerator.h  typetypeclient.h  typetypedb.h  typetypehttp.h  typetypepacket.h  typetypeprotocol.h  typetypeserver.h
build-Spritet-Qt5_5-Debug/: Makefile  moc_colorswitcher.cpp  moc_drawingcanvas.cpp  moc_drawingframe.cpp  moc_framecontainer.cpp  moc_framepanel.cpp  moc_hotkeypanel.cpp  moc_menu.cpp  moc_modtroller.cpp  moc_preview.cpp  moc_spritetgui.cpp  moc_thumbnail.cpp  moc_tool.cpp  moc_toolbox.cpp  moc_toolbutton.cpp  qrc_icons.cpp
(+167 files in other folders)
